--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ material = "1.10.0"
 lifecycle = "2.7.0"
 navigation = "2.7.6"
 camerax = "1.3.1"
-mlkit = "18.0.0"
+mlkit = "18.0.0-beta5"
 coil = "2.5.0"
 coroutines = "1.7.3"
 activity = "1.8.2"
@@ -62,4 +62,5 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+androidx-navigation-safe-args-gradle-plugin = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
 
