--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ build/
 # Django
 *.log
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
 /media
 /staticfiles
 
@@ -38,3 +40,4 @@ dist/
 
 /cache
 /backend/media
+*.sqlite3
